# interpretability-ff-research

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  LICENSE  README.md  analyze.ipynb  croissant.json  justfile  pyproject.toml
analysis/: README.md  __init__.py  ancova_family.py  exclusive_catch_rates.py  funnel_plot.py  load_results.py  loocv_scaling.py  meta_regression.py  pearson_vs_spearman.py  permutation_test.py  run_all.py  selectivity.py
assets/: README.md
figures/: fig_cross_family.py  generate_all.py  style.py
notebooks/: README.md  phase9_colab.ipynb  walkthrough_analysis.ipynb
reports/: figure_sources.json  paper_values.json  scopes.json
results/: README.md  bottleneck_scaling.json  cifar10.json  cross_family.json  dataset_revisions.json  gemma-3-1b_main.json  gemma-3-1b_nonlinear-probe.json  gemma-3-4b_main.json  gemma4b_results.json  gemma4b_v3_results.json  gpt-2-124m_nonlinear-probe.json  gpt-2-124m_sae-comparison.json  gpt-2-124m_shuffle-control.json  gpt-2_bottleneck-scaling.json  gpt2-124m_main.json  gpt2-124m_residualizer-split.json  gpt2-large_main.json  gpt2-medium_main.json  gpt2-xl_main.json  llama-3.1-8b_main.json  llama-3.2-1b-instruct_main.json  llama-3.2-1b_main.json  llama-3.2-1b_mechanistic.json  llama-3.2-3b_main.json  llama-3.2-3b_mechanistic.json  llama-3.2-3b_nonlinear-probe-multilayer.json  llama-3.2-3b_nonlinear-probe.json  llama-3.2-3b_residualizer-split.json  llama1b_instruct_results.json  llama1b_results.json  llama8b_v3_results.json  mechanistic_7b.json  medqa_selective_results.json  mnist.json  (+70 more)
(+68 files in other folders)
